--- a/package.json
+++ b/package.json
@@ -6,13 +6,12 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "async": "^1.4.0",
     "body-parser": "~1.12.4",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "ejs": "~2.3.1",
     "express": "~4.12.4",
-    "mongoose": "^4.0.5",
+    "fast-csv": "^0.6.0",
     "morgan": "~1.5.3",
     "restler": "^3.3.0",
     "serve-favicon": "~2.2.1"
